data/derived/sp14/progs/unify/prog4108.ml.out
Characters 128-132:
  let seen' = if List.mem h t then h@[] in
                                   ^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
